--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "express": "4.13.4",
     "express-session": "^1.13.0",
     "helmet": "^1.3.0",
+    "ip": "^1.1.2",
+    "lodash": "^4.6.1",
     "node-fetch": "^1.4.1"
   }
 }
