--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "helmet": "^1.3.0",
     "ip": "^1.1.2",
     "lodash": "^4.6.1",
+    "mongoose": "^4.4.12",
     "node-fetch": "^1.4.1"
   }
 }
