--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.7.1",
     "es6-promise": "^3.1.2",
     "express": "4.13.4",
     "express-session": "^1.13.0",
