--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nobreaks-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "API for nobreaksguild.com",
   "main": "index.js",
   "scripts": {
@@ -16,6 +16,7 @@
     "helmet": "^1.3.0",
     "ip": "^1.1.2",
     "lodash": "^4.6.1",
+    "moment": "^2.13.0",
     "mongoose": "^4.4.12",
     "node-fetch": "^1.4.1"
   }
