--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cors": "^2.7.1",
     "es6-promise": "^3.1.2",
     "express": "4.13.4",
