--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.6.1",
     "moment": "^2.13.0",
     "mongoose": "^4.4.12",
-    "node-fetch": "^1.4.1"
+    "node-fetch": "^1.4.1",
+    "wow-itemstring": "^1.0.1"
   }
 }
