--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "helmet": "^2.1.1",
     "ip": "^1.1.2",
     "lodash": "^4.6.1",
-    "moment": "^2.13.0",
+    "moment-timezone": "^0.5.5",
     "mongoose": "^4.4.12",
     "node-fetch": "^1.4.1",
     "wow-itemstring": "^1.0.1"
