--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nobreaks-api",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "API for nobreaksguild.com",
   "main": "index.js",
   "scripts": {
@@ -10,12 +10,14 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cors": "^2.7.1",
     "es6-promise": "^3.1.2",
     "express": "4.14.0",
     "express-session": "^1.13.0",
     "helmet": "^2.1.1",
     "ip": "^1.1.2",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.6.1",
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.4.12",
