--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment-timezone": "^0.5.5",
     "mongoose": "^4.4.12",
     "node-fetch": "^1.4.1",
+    "passport": "^0.3.2",
     "serve-static": "^1.11.1",
     "wow-itemstring": "^1.0.1"
   }
