--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^4.4.12",
     "node-fetch": "^1.4.1",
     "passport": "^0.3.2",
+    "passport-bnet": "^1.2.1",
     "serve-static": "^1.11.1",
     "wow-itemstring": "^1.0.1"
   }
